; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavutil/extr_spherical.c_av_spherical_alloc.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavutil/extr_spherical.c_av_spherical_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @av_spherical_alloc(i64* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64*, align 8
  %4 = alloca i32*, align 8
  store i64* %0, i64** %3, align 8
  %5 = call i32* @av_mallocz(i32 4)
  store i32* %5, i32** %4, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  store i32* null, i32** %2, align 8
  br label %16

9:                                                ; preds = %1
  %10 = load i64*, i64** %3, align 8
  %11 = icmp ne i64* %10, null
  br i1 %11, label %12, label %14

12:                                               ; preds = %9
  %13 = load i64*, i64** %3, align 8
  store i64 4, i64* %13, align 8
  br label %14

14:                                               ; preds = %12, %9
  %15 = load i32*, i32** %4, align 8
  store i32* %15, i32** %2, align 8
  br label %16

16:                                               ; preds = %14, %8
  %17 = load i32*, i32** %2, align 8
  ret i32* %17
}

declare dso_local i32* @av_mallocz(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
